tests/error/comptime/check_dereference18.bz
function foo(i: move int32) -> &int32
{
	return i;
}

function test()
{
	(consteval {
		let &i = foo(0);
		i;
	});
}
